Reworked entire webiste

--- a/homepage.html
+++ b/homepage.html
@@ -1,28 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Clair Homepage</title>
+  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  <title>Bootstrap Theme Simply Me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Scripts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+  </style>
   <link rel="stylesheet" href="homepage.css">
+
 </head>
 <body>
-<div class="jumbotron text-center">
 
-  <h1 class="display-4">Clair Hawkes</h1>
-  <p class="lead">Software Engineer</p>
+<!-- Navbar -->
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Clair Hawkes</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">HOME</a></li>
+        <li><a href="#AboutMe">MISSION</a></li>
+        <li><a href="#Portfolio">PORTFOLIO</a></li>
+        <li><a href="#Contact">CONTACT</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
+<!-- First Container -->
+<div class="container-fluid bg-1 text-center section">
+  <h3 class="margin">I build applications for the web!</h3>
+  <img src="https://raw.githubusercontent.com/Clair-Hawkes/Personal_Website/main/Prof_Pic.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="auto">
+  <h3>San Francisco based software engineer!</h3>
 </div>
-<div class="container-fluid">
-  <h3>Who Am I?</h3>
-  <img src="bird.jpg" alt="Bird">
-  <h3>I'm an adventurer</h3>
+
+<!-- Second Container -->
+<div id="AboutMe" class="container-fluid bg-3 text-center section">
+  <h3 class="text-center">Mission</h3>
+  <p>"My goal is to advocate for my community with compassion by solving problems and building tools." -Clair Hawkes</p>
 </div>
+
+<!-- Third Container (Grid) -->
+<div id="Portfolio" class="container-fluid bg-2 text-center">
+  <h3 class="margin">Portfolio</h3><br>
+  <div class="row">
+    <div class="col-sm-6">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/LinkedIn_Logo.svg/1280px-LinkedIn_Logo.svg.png" class="img-responsive margin center" style="width:50%" alt="Image">
+      <p>LinkedIn - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="col-sm-6">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/GitHub_logo_2013.svg/2880px-GitHub_logo_2013.svg.png" class="img-responsive margin center" style="width:50%" alt="Image">
+      <p>Github - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <!-- <div class="col-sm-4">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/1920px-Twitter-logo.svg.png" class="img-responsive margin" style="width:25%" alt="Image">
+      <p>Extra - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div> -->
+  </div>
+</div>
+
+<!-- Fourth Container (Grid) -->
+<div id="Contact" class="container-fluid bg-3 text-center">
+  <h3 class="margin">Where To Find Me?</h3><br>
+  <div class="row">
+    <div class="col-sm-6">
+      <a href="https://www.linkedin.com/in/clair-hawkes/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/LinkedIn_Logo.svg/1280px-LinkedIn_Logo.svg.png" class="img-responsive margin center" style="width:50%" alt="Image"></a>
+      <p><a href="https://www.linkedin.com/in/clair-hawkes/">Linked In - </a>Results-driven software engineer with strong experience in project management, development, and
+        creative thinking.</p>
+    </div>
+    <div class="col-sm-6">
+      <a href="https://github.com/Clair-Hawkes"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/GitHub_logo_2013.svg/2880px-GitHub_logo_2013.svg.png" class="img-responsive margin center" style="width:50%" alt="Image"></a>
+      <p><a href="https://github.com/Clair-Hawkes">Github - </a>JavaScript | Python | React | SQL - PostgreSQL | HTML | CSS | Git | GitHub
+        React Testing Library | Node Express | Django | Flask | SQLAlchemy | jest | unittest | </p>
+    </div>
+    <!-- <div class="col-sm-4">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/1920px-Twitter-logo.svg.png" class="img-responsive margin" style="width:25%" alt="Image">
+      <p>Extra - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div> -->
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="container-fluid bg-4 text-center">
+  <p>Email - <a href="mailto: hawkesj7@gmail.com">hawkesj7@gmail.com</a></p>
+</footer>
 
 </body>
 </html>
