Floating NavBar and Portfolio section

--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
+  <title>Clair Hawkes Website - Software Engineer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -17,7 +17,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default sticky">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -52,48 +52,43 @@
 </div>
 
 <!-- Third Container (Grid) -->
-<div id="Portfolio" class="container-fluid bg-2 text-center">
+<div id="Portfolio" class="container-fluid bg-2 text-center section">
   <h3 class="margin">Portfolio</h3><br>
   <div class="row">
     <div class="col-sm-6">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/LinkedIn_Logo.svg/1280px-LinkedIn_Logo.svg.png" class="img-responsive margin center" style="width:50%" alt="Image">
-      <p>LinkedIn - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a href="https://raw.githubusercontent.com/Clair-Hawkes/homepage/main/ShareBnB_Diagram_2022_png.001.jpeg" target="_blank"><img src="https://raw.githubusercontent.com/Clair-Hawkes/homepage/main/ShareBnB_Diagram_2022_png.001.jpeg" class="img-responsive margin center" style="width:50%" alt="Share BnB Application"></a>
+      <p>Share BnB <a href="https://github.com/Clair-Hawkes/react-share-bnb">React front end</a> | <a href="https://github.com/hannahanela/flask-share-bnb">Flask back end</a> - Engineered a full stack application in a team of two people in 3.5 days, including all planning and design.
+        Created a Flask backend restful API and utilized Amazon S3 image file bucket, React front-end, and PostgreSQL database.</p>
     </div>
     <div class="col-sm-6">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/GitHub_logo_2013.svg/2880px-GitHub_logo_2013.svg.png" class="img-responsive margin center" style="width:50%" alt="Image">
-      <p>Github - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a href="https://raw.githubusercontent.com/Clair-Hawkes/homepage/main/warbler.png" target="_blank"><img src="https://raw.githubusercontent.com/Clair-Hawkes/homepage/main/warbler.png" class="img-responsive margin center" style="width:50%" alt="Warbler Application"></a>
+      <p><a href="https://github.com/Clair-Hawkes/flask_warbler">Warbler - </a>Multi-day exercise to extend a somewhat-functioning Twitter clone. Practiced reading and understanding an existing application, fixing bugs, writing tests, and extending new features.</p>
     </div>
-    <!-- <div class="col-sm-4">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/1920px-Twitter-logo.svg.png" class="img-responsive margin" style="width:25%" alt="Image">
-      <p>Extra - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div> -->
   </div>
 </div>
 
 <!-- Fourth Container (Grid) -->
-<div id="Contact" class="container-fluid bg-3 text-center">
+<div id="Contact" class="container-fluid bg-3 text-center section">
   <h3 class="margin">Where To Find Me?</h3><br>
   <div class="row">
     <div class="col-sm-6">
       <a href="https://www.linkedin.com/in/clair-hawkes/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/LinkedIn_Logo.svg/1280px-LinkedIn_Logo.svg.png" class="img-responsive margin center" style="width:50%" alt="Image"></a>
       <p><a href="https://www.linkedin.com/in/clair-hawkes/">Linked In - </a>Results-driven software engineer with strong experience in project management, development, and
-        creative thinking.</p>
+        creative thinking. Values: Creative Thinking | Team Building
+      </p>
     </div>
     <div class="col-sm-6">
       <a href="https://github.com/Clair-Hawkes"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/GitHub_logo_2013.svg/2880px-GitHub_logo_2013.svg.png" class="img-responsive margin center" style="width:50%" alt="Image"></a>
       <p><a href="https://github.com/Clair-Hawkes">Github - </a>JavaScript | Python | React | SQL - PostgreSQL | HTML | CSS | Git | GitHub
         React Testing Library | Node Express | Django | Flask | SQLAlchemy | jest | unittest | </p>
     </div>
-    <!-- <div class="col-sm-4">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/1920px-Twitter-logo.svg.png" class="img-responsive margin" style="width:25%" alt="Image">
-      <p>Extra - Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div> -->
   </div>
 </div>
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
   <p>Email - <a href="mailto: hawkesj7@gmail.com">hawkesj7@gmail.com</a></p>
+  <p>Graduate of <a href="https://www.rithmschool.com">Rithm School</a> - R26</p>
 </footer>
 
 </body>
