Added footnote email to navbar

--- a/homepage.html
+++ b/homepage.html
@@ -33,6 +33,7 @@
         <li><a href="#AboutMe">MISSION</a></li>
         <li><a href="#Portfolio">PORTFOLIO</a></li>
         <li><a href="#Contact">CONTACT</a></li>
+        <li><a href="#Email">EMAIL</a></li>
       </ul>
     </div>
   </div>
@@ -86,7 +87,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
+<footer id="Email" class="container-fluid bg-4 text-center">
   <p>Email - <a href="mailto: hawkesj7@gmail.com">hawkesj7@gmail.com</a></p>
   <p>Graduate of <a href="https://www.rithmschool.com">Rithm School</a> - R26</p>
 </footer>
